...
    <string name="incid_resolucion_reg_ac_button_rot">Registrar resolución</string>
    <string name="incid_resolucion_rot">Datos resolución</string>
    <string name="incid_resolucion_coste_prev_rot">Coste estimado EUR:</string>
    <string name="incid_resolucion_coste_prev_hint">-- tu estimación --</string>
    <string name="incid_resolucion_coste_prev_msg">Coste estimado</string>
    <!-- ===================== IncidSeeByComuAc ===================== -->
    <string name="incid_see_by_user_ac_label">Tus incidencias</string>
    <string name="incid_apertura_rot">Apertura:</string>
    <string name="incid_cierre_rot">Cierre:</string>
    <string name="incid_importancia_user_rot">Importancia:</string>
    <string name="incid_importancia_comunidad_rot">Importancia en la comunidad:</string>
    <string name="incid_comunidad_rot">Comunidad:</string>
    <string name="incid_incidencias_rot">Incidencias:</string>
    <string name="incid_ambito_rot">Ámbito:</string>
    <string name="incid_see_resolucion_label">Resolución:</string>
    <string name="incid_see_resolucion_fecha_alta_label">iniciada</string>
    <string name="incid_closed_by_user_ac_label">Incidencias cerradas</string>
    <!--******************************************************************************-->
    <!--                                  USUARIO                                     -->
    <!--******************************************************************************-->
    <!-- ============================ MESSAGES ============================== -->
    <string name="comunidad_not_found_message">No podemos mostrarte esta comunidad. Búscala nuevamente.</string>
    <string name="comunidad_duplicate">Esta comunidad ya había sido registrada</string>
...
    <!-- .......... RegUserComuFr ....... -->
    <string name="reg_usercomu_vivienda_rot">Tu vivienda</string>
    <string name="reg_usercomu_portal_hint">-- Portal --</string>
    <string name="reg_usercomu_escalera_hint">-- Escalera --</string>
    <string name="reg_usercomu_planta_hint">-- Planta --</string>
    <string name="reg_usercomu_puerta_hint">-- Puerta --</string>
    <string name="reg_usercomu_portal_rot">Portal</string>
    <string name="reg_usercomu_escalera_rot">Escalera</string>
    <string name="reg_usercomu_planta_rot">Planta</string>
    <string name="reg_usercomu_puerta_rot">Puerta</string>
    <string name="reg_usercomu_role_checkbox_rot">Vínculo</string>
    <string name="reg_usercomu_ac_button_rot">Adhiérete a la comunidad</string>
    <!--para mensaje de error validación y rótulos de campos  -->
    <string name="reg_usercomu_checkbox_pre_rot">Presidente</string>
    <string name="reg_usercomu_checbox_admin_rot">Administrador</string>
    <string name="reg_usercomu_checbox_pro_rot">Propietario</string>
    <string name="reg_usercomu_checbox_inq_rot">Arrendatario</string>
    <string name="reg_usercomu_role_rot">Vínculo con la comunidad</string>
    <!-- .......... RegComuFr ........... -->
    <string name="municipio_spinner">municipio</string>
    <string name="municipio">Municipio</string>
    <string name="tipo_via">Tipo vía</string>
    <string name="tipo_via_spinner">tipo de vía </string>
    <string name="nombre_via">Nombre de la vía</string>
    <string name="sufijo_numero">Sufijo</string>
    <!-- ================== RegUserComuAc ================= -->
    <string name="regusuario_comu_ac_label">Comunidad seleccionada</string>
    <!-- ........... RegUserFr ......... -->
    <string name="usuario_alias_hint">Nombre: 6–30 letras, números, _</string>
    <!-- ================= SeeUserComuByComuAc ============ -->
...
