...
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <EditText
            android:id="@+id/reg_usercomu_portal_ed"
            style="@style/textBase.editField"
            android:hint="@string/reg_usercomu_portal_hint"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:layout_weight="1"
            android:gravity="center"
...
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_admin_rot"
            android:background="@color/transparent"
        />

        <CheckBox
            android:id="@+id/reg_usercomu_checbox_pro"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_pro_rot"
            android:background="@color/transparent"
        />

        <CheckBox
            android:id="@+id/reg_usercomu_checbox_inq"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_inq_rot"
            android:background="@color/transparent"
        />
    </GridLayout>

...
