...
        <LinearLayout android:id="@+id/reg_usercomu_ac_layout"
                      style="@style/baseLayout"
                      android:layout_marginTop="@dimen/app_bar_bottom_margin"
                      tools:context="com.didekindroid.com.didekinaar.usuario.RegUserComuAc">

            <fragment
                android:id="@+id/reg_usercomu_frg"
                android:name="com.didekinaar.usuariocomunidad.RegUserComuFr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/reg_usercomu_fr"/>

            <Button
                android:id="@+id/reg_usercomu_button"
                style="@style/textBase.acButton1"
                android:layout_gravity="center_horizontal"
                android:text="@string/reg_usercomu_ac_button_rot"/>

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
...
